fix(filter-multi-select): align section spacing with section label

--- a/packages/select/src/FilterMultiSelect/components/ListBoxSection/ListBoxSection.scss
+++ b/packages/select/src/FilterMultiSelect/components/ListBoxSection/ListBoxSection.scss
@@ -2,6 +2,8 @@
 @import "~@kaizen/design-tokens/sass/color";
 @import "~@kaizen/design-tokens/sass/typography";
 
+$labelAndSectionSpacing: $spacing-xs;
+
 .sectionLabel {
   color: rgba($color-purple-800-rgb, 0.7);
   font-family: $typography-heading-6-font-family;
@@ -9,7 +11,7 @@
   font-weight: $typography-heading-6-font-weight;
   line-height: $typography-heading-6-line-height;
   letter-spacing: $typography-heading-6-letter-spacing;
-  padding: $spacing-xs;
+  padding: $labelAndSectionSpacing;
   align-items: flex-start;
 }
 
@@ -19,4 +21,5 @@
   display: grid;
   max-height: 210px;
   overflow-y: auto;
+  margin-left: $labelAndSectionSpacing;
 }
